Bug 43741 - When 'justified alignment' settings text which underlining and/or strikethrough, decorative line protrude over the EOL.
Summary: When 'justified alignment' settings text which underlining and/or strikethrou...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-12 01:45 UTC by sanada
Modified: 2017-07-03 15:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
(same as #43740...) (16.18 KB, application/vnd.oasis.opendocument.text)
2011-12-12 01:45 UTC, sanada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sanada 2011-12-12 01:45:43 UTC
Created attachment 54355 [details]
(same as #43740...)

I attach ODT file.
Comment 1 sasha.libreoffice 2012-04-27 10:21:29 UTC
Thanks for bugreport
reproduced in 3.3.4 and 3.5.2 on Fedora 64 bit and Windows 7 32 bit
Comment 2 QA Administrators 2015-04-19 03:23:43 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2015-06-19 14:48:39 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 437210d58f32177ef1829d704f7f4d2f1bbfbfdd
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-18_07:21:56
Locale: fi-FI (fi_FI)
Comment 4 QA Administrators 2016-09-20 10:12:09 UTC Comment hidden (obsolete)
Comment 5 Mark Hung 2017-03-18 04:40:43 UTC
Still reproducible
版本:5.3.0.3
組建 ID:7074905676c47b82bbcfbea1aeefc84afe1c50e1
CPU 執行緒:8; OS 版本:Windows 6.2; UI 算繪:預設; 介面配置引擎:新式; 
語言地區:zh-TW (zh_TW); Calc: single
Comment 6 Commit Notification 2017-04-15 11:49:31 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25f079087fb4368b94ec3cc791fb04eeb1405bb3

tdf#43741 do not add space to the last character.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-06-09 09:58:10 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?