tdf#43741 do not add space to the last character.

Adding space to the last chracter make textlines extrude
the boundary. Check SpaceStop to prevent adding space
after hole portion or the last character.

Change-Id: If252a8a57cf55752cb152aa78688157f5d528b99
Reviewed-on: https://gerrit.libreoffice.org/35978
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>