sw/source/core/txtnode/fntcache.cxx
@@ -1242,7 +1242,7 @@ void SwFntObj::DrawText( SwDrawTextInfo &rInf )
                     if (!MsLangId::isKorean(aLang))
                     {
                         SwScriptInfo::CJKJustify( rInf.GetText(), pKernArray.get(), nullptr,
-                                rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd );
+                                rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd, rInf.IsSpaceStop() );
 
                         bSpecialJust = true;
                         nSpaceAdd = 0;
@@ -1447,7 +1447,7 @@ void SwFntObj::DrawText( SwDrawTextInfo &rInf )
                 if (!MsLangId::isKorean(aLang))
                 {
                     SwScriptInfo::CJKJustify( rInf.GetText(), pKernArray.get(), pScrArray.get(),
-                            rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd );
+                            rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd, rInf.IsSpaceStop() );
 
                     nSpaceAdd = 0;
                 }
@@ -2040,7 +2040,7 @@ sal_Int32 SwFntObj::GetCursorOfst( SwDrawTextInfo &rInf )
             if (!MsLangId::isKorean(aLang))
             {
                 SwScriptInfo::CJKJustify( rInf.GetText(), pKernArray.get(), nullptr,
-                        rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd );
+                        rInf.GetIdx(), rInf.GetLen(), aLang, nSpaceAdd, rInf.IsSpaceStop() );
 
                 nSpaceAdd = 0;
             }
